--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -93,17 +93,17 @@ flutter:
 flutter_launcher_icons:
   android: "launcher_icon"
   ios: true
-  image_path: "assets/level_up_sport.png"
+  image_path: "assets/app_logo.jpg"
   min_sdk_android: 21 # android min sdk min:16, default 21
   web:
     generate: true
-    image_path: "assets/level_up_sport.png"
+    image_path: "assets/app_logo.jpg"
     background_color: "#2196F3"
     theme_color: "#2196F3"
   windows:
     generate: true
-    image_path: "assets/level_up_sport.png"
+    image_path: "assets/app_logo.jpg"
     icon_size: 48 # min:48, max:256, default: 48
   macos:
     generate: true
-    image_path: "assets/level_up_sport.png"
+    image_path: "assets/app_logo.jpg"
