--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -8,11 +8,11 @@ workflows:
     environment:
       ios_signing:
         distribution_type: app_store          # or ad_hoc / development / enterprise
-        bundle_identifier: com.example.levleUpSport
+        bundle_identifier: com.example.levelUpSport
       xcode: latest
       cocoapods: default
       vars:
-        BUNDLE_ID: "com.example.levleUpSport"
+        BUNDLE_ID: "com.example.levelUpSport"
         XCODE_WORKSPACE: "Runner.xcworkspace"   # or remove if you only have .xcodeproj
         XCODE_SCHEME: "Runner"
         APP_STORE_APPLE_ID: 6754937234
