--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -19,7 +19,9 @@ workflows:
     scripts:
       - name: Install CocoaPods dependencies
         script: |
+          cd ios
           pod install
+          cd ..
       - name: Set up provisioning profiles settings on Xcode project
         script: xcode-project use-profiles
       - name: Build ipa for distribution
