--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,10 +17,15 @@ workflows:
         XCODE_SCHEME: "Runner"
         APP_STORE_APPLE_ID: 6754937234
     scripts:
+      - name: Clean Flutter and iOS build folders
+        script: |
+          flutter clean
+          rm -rf ios/Pods ios/Podfile.lock ios/Flutter/Flutter.framework ios/Flutter/Flutter.podspec
+          flutter pub get
       - name: Install CocoaPods dependencies
         script: |
           cd ios
-          pod install
+          pod install --repo-update
           cd ..
       - name: Set up provisioning profiles for iOS project only
         script: |
