fix XCFileList issue

--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,25 +16,40 @@ workflows:
         XCODE_WORKSPACE: "Runner.xcworkspace"
         XCODE_SCHEME: "Runner"
         APP_STORE_APPLE_ID: 6754937234
+
     scripts:
       - name: Clean Flutter and iOS build folders
         script: |
           flutter clean
           rm -rf ios/Pods ios/Podfile.lock ios/Flutter/Flutter.framework ios/Flutter/Flutter.podspec
           flutter pub get
-      - name: Install CocoaPods dependencies
+
+      - name: Regenerate iOS Pods properly
         script: |
           cd ios
-          pod install --repo-update
+          pod deintegrate
+          pod repo update
+          pod install
           cd ..
+
+      - name: Fix Xcode Pods file references
+        script: |
+          cd ios
+          rm -rf "Target Support Files/Pods-Runner/Pods-Runner-frameworks-Release-input-files.xcfilelist"
+          rm -rf "Target Support Files/Pods-Runner/Pods-Runner-frameworks-Release-output-files.xcfilelist"
+          pod install
+          cd ..
+
       - name: Set up provisioning profiles for iOS project only
         script: |
           xcode-project use-profiles --project ios/Runner.xcodeproj
+
       - name: Build ipa for distribution
         script: |
           xcode-project build-ipa \
             --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
             --scheme "$XCODE_SCHEME"
+
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
@@ -46,6 +61,7 @@ publishing:
     notify:
       success: true
       failure: true
+
   app_store_connect:
     auth: integration
     submit_to_testflight: true
