--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -16,14 +16,13 @@ workflows:
         XCODE_WORKSPACE: "Runner.xcworkspace"
         XCODE_SCHEME: "Runner"
         APP_STORE_APPLE_ID: 6754937234
+
     scripts:
       - name: Clean Flutter and iOS build folders
         script: |
           flutter clean
           rm -rf ios/Pods
           rm -rf ios/Podfile.lock
-          rm -rf ios/Flutter/Flutter.framework
-          rm -rf ios/Flutter/Flutter.podspec
           flutter pub get
 
       - name: Install CocoaPods dependencies
@@ -32,12 +31,17 @@ workflows:
           pod install
           cd ..
 
+      - name: Set up provisioning profiles for iOS project only
+        script: |
+          xcode-project use-profiles --project ios/Runner.xcodeproj
+
       - name: Build ipa for distribution
         script: |
           xcode-project build-ipa \
             --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
             --scheme "$XCODE_SCHEME" \
-            --archive-flags "-destination 'generic/platform=iOS'"
+            --export-method app-store \
+            --team-id B6Z4CUVQVP
 
     artifacts:
       - build/ios/ipa/*.ipa
