--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,10 +1,11 @@
 workflows:
   ios-native-workflow:
-    name: iOS Native
+    name: iOS Native Build
     max_build_duration: 120
     instance_type: mac_mini_m2
     integrations:
       app_store_connect: SabihKey
+
     environment:
       ios_signing:
         distribution_type: app_store
@@ -12,51 +13,48 @@ workflows:
       xcode: latest
       cocoapods: default
       vars:
-        BUNDLE_ID: "com.example.levelUpSport"
         XCODE_WORKSPACE: "Runner.xcworkspace"
         XCODE_SCHEME: "Runner"
+        BUNDLE_ID: "com.example.levelUpSport"
         APP_STORE_APPLE_ID: 6754937234
 
     scripts:
-      - name: Clean Flutter and iOS build folders
+      - name: Clean Flutter and iOS folders
         script: |
           flutter clean
-          rm -rf ios/Pods
-          rm -rf ios/Podfile.lock
+          rm -rf ios/Pods ios/Podfile.lock
           flutter pub get
 
-      - name: Install CocoaPods dependencies
+      - name: Install CocoaPods
         script: |
           cd ios
           pod install
           cd ..
 
-      - name: Set up provisioning profiles for iOS project only
+      - name: Use provisioning profiles
         script: |
           xcode-project use-profiles --project ios/Runner.xcodeproj
 
-      - name: Build ipa for distribution
+      - name: Build IPA for App Store
         script: |
           xcode-project build-ipa \
-            --workspace "$CM_BUILD_DIR/ios/$XCODE_WORKSPACE" \
-            --scheme "$XCODE_SCHEME" \
-            --export-method app-store \
-            --team-id B6Z4CUVQVP
+            --workspace ios/Runner.xcworkspace \
+            --scheme Runner
 
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
 
-    publishing:
-      email:
-        recipients:
-          - levelupsports96@gmail.com
-        notify:
-          success: true
-          failure: true
-      app_store_connect:
-        auth: integration
-        submit_to_testflight: true
-        submit_to_app_store: false
-        beta_groups:
-          - "Internal Testers"
+publishing:
+  email:
+    recipients:
+      - levelupsports96@gmail.com
+    notify:
+      success: true
+      failure: true
+  app_store_connect:
+    auth: integration
+    submit_to_testflight: true
+    submit_to_app_store: false
+    beta_groups:
+      - "Internal Testers"
