--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,12 +1,15 @@
 workflows:
   ios-native-workflow:
-    name: iOS Native Build
+    name: iOS App Store Build
     max_build_duration: 120
     instance_type: mac_mini_m2
+
     integrations:
-      app_store_connect: SabihKey
+      app_store_connect: SabihKey   # ✅ your Codemagic Apple API integration key
 
     environment:
+      groups:
+        - app_store_connect          # ✅ this links to the environment variable group you set
       ios_signing:
         distribution_type: app_store
         bundle_identifier: com.example.levelUpSport
@@ -16,7 +19,7 @@ workflows:
         XCODE_WORKSPACE: "Runner.xcworkspace"
         XCODE_SCHEME: "Runner"
         BUNDLE_ID: "com.example.levelUpSport"
-        APP_STORE_APPLE_ID: 6754937234
+        APP_STORE_APPLE_ID: 6754937234  # your app's Apple ID
 
     scripts:
       - name: Clean Flutter and iOS folders
@@ -45,16 +48,17 @@ workflows:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
 
-publishing:
-  email:
-    recipients:
-      - levelupsports96@gmail.com
-    notify:
-      success: true
-      failure: true
-  app_store_connect:
-    auth: integration
-    submit_to_testflight: true
-    submit_to_app_store: false
-    beta_groups:
-      - "Internal Testers"
+    publishing:
+      email:
+        recipients:
+          - levelupsports96@gmail.com
+        notify:
+          success: true
+          failure: true
+
+      app_store_connect:
+        auth: integration
+        submit_to_testflight: true
+        submit_to_app_store: false
+        beta_groups:
+          - "Internal Testers"
