--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,3 +1,12 @@
+# ✅ Automatically trigger build on every push to main
+triggering:
+  events:
+    - push
+  branch_patterns:
+    - pattern: main
+      include: true
+      source: true
+
 workflows:
   ios-native-workflow:
     name: iOS Native Build
@@ -19,51 +28,54 @@ workflows:
         APP_STORE_APPLE_ID: 6754937234
 
     scripts:
+      # 🧹 Clean Flutter and iOS build folders
       - name: Clean Flutter and iOS folders
         script: |
           flutter clean
           rm -rf ios/Pods ios/Podfile.lock
           flutter pub get
 
+      # 🍎 Install CocoaPods dependencies
       - name: Install CocoaPods
         script: |
           cd ios
           pod install
           cd ..
 
-      - name: Use provisioning profiles
-        script: |
-          xcode-project use-profiles --project ios/Runner.xcodeproj
-
-      - name: Increment build and version number
+      # 🔢 Automatically bump version and build number
+      - name: Increment iOS version and build number automatically
         script: |
           cd ios
           INFO_PLIST="Runner/Info.plist"
 
-          # Extract current version and build numbers
-          CURRENT_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$INFO_PLIST")
-          CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$INFO_PLIST")
+          # Get current version and build number (default 1.0.0 / 0 if missing)
+          CURRENT_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$INFO_PLIST" || echo "1.0.0")
+          CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$INFO_PLIST" || echo "0")
 
-          echo "Current version: $CURRENT_VERSION"
-          echo "Current build: $CURRENT_BUILD"
+          # Split version into parts (major.minor.patch)
+          IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
+
+          # Increment patch version
+          NEW_PATCH=$((patch + 1))
+          NEW_VERSION="${major}.${minor}.${NEW_PATCH}"
 
           # Increment build number
           NEW_BUILD=$((CURRENT_BUILD + 1))
 
-          # Increment patch version (e.g. 1.0.3 -> 1.0.4)
-          IFS='.' read -r MAJOR MINOR PATCH <<< "$CURRENT_VERSION"
-          PATCH=$((PATCH + 1))
-          NEW_VERSION="$MAJOR.$MINOR.$PATCH"
-
-          echo "New version: $NEW_VERSION"
-          echo "New build: $NEW_BUILD"
-
-          # Apply the new version and build
+          # Apply changes
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $NEW_VERSION" "$INFO_PLIST"
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
 
+          echo "✅ Updated Version: $NEW_VERSION ($NEW_BUILD)"
+
           cd ..
 
+      # 🧾 Apply provisioning profiles
+      - name: Use provisioning profiles
+        script: |
+          xcode-project use-profiles --project ios/Runner.xcodeproj
+
+      # 🏗️ Build the IPA for App Store / TestFlight
       - name: Build IPA for App Store
         script: |
           xcode-project build-ipa \
