--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -71,37 +71,47 @@ workflows:
             --scheme Runner
           echo "✅ IPA build completed."
 
-      - name: 🔍 Verify Info.plist in built IPA (auto-detect file)
-        script: |
-          echo "🔍 Checking CFBundleVersion inside built archive..."
-          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
-          if [ -z "$IPA_PATH" ]; then
-            echo "❌ No IPA found under build/ios/ipa/"
-            exit 1
-          fi
-
-          echo "✅ Found IPA at: $IPA_PATH"
-          mkdir -p extracted_ipa
-          unzip -q "$IPA_PATH" -d extracted_ipa
-          APP_PLIST=$(find extracted_ipa/Payload -name "Info.plist" | head -1)
-          if [ -f "$APP_PLIST" ]; then
-            echo "✅ Found embedded Info.plist: $APP_PLIST"
-            echo "CFBundleShortVersionString:"
-            /usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$APP_PLIST" || echo "⚠️ Not found"
-            echo "CFBundleVersion:"
-            /usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$APP_PLIST" || echo "⚠️ Not found"
-          else
-            echo "❌ No Info.plist found inside .ipa!"
-            exit 1
-          fi
-
-      - name: 🚀 Upload to App Store Connect (TestFlight)
+      - name: 🩹 Fix Info.plist inside built IPA before upload
         script: |
           IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           if [ -z "$IPA_PATH" ]; then
             echo "❌ No IPA found for upload!"
             exit 1
           fi
+
+          echo "🔧 Patching Info.plist inside $IPA_PATH ..."
+          mkdir -p extracted_ipa
+          unzip -q "$IPA_PATH" -d extracted_ipa
+
+          APP_PLIST=$(find extracted_ipa/Payload -name "Info.plist" | head -1)
+          if [ ! -f "$APP_PLIST" ]; then
+            echo "❌ Info.plist not found in archive!"
+            exit 1
+          fi
+
+          # Ensure both keys exist
+          /usr/libexec/PlistBuddy -c "Add :CFBundleVersion string 1" "$APP_PLIST" 2>/dev/null || true
+          /usr/libexec/PlistBuddy -c "Add :CFBundleShortVersionString string 1.0.0" "$APP_PLIST" 2>/dev/null || true
+
+          # Copy values from source Info.plist
+          SRC_PLIST=$INFO_PLIST_PATH
+          SRC_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$SRC_PLIST")
+          SRC_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$SRC_PLIST")
+
+          echo "Setting archive Info.plist to Version=$SRC_VERSION Build=$SRC_BUILD"
+          /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $SRC_VERSION" "$APP_PLIST"
+          /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $SRC_BUILD" "$APP_PLIST"
+
+          # Re-zip the IPA
+          cd extracted_ipa
+          zip -qry "../fixed.ipa" .
+          cd ..
+          mv fixed.ipa "$IPA_PATH"
+          echo "✅ Fixed Info.plist inside archive."
+
+      - name: 🚀 Upload to App Store Connect (TestFlight)
+        script: |
+          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           echo "📤 Uploading $IPA_PATH to App Store Connect..."
           app-store-connect upload \
             --path "$IPA_PATH" \
@@ -114,7 +124,6 @@ workflows:
                 --use-latest-version \
                 --submit-for-testflight true
             }
-
           echo "✅ Upload complete! Check App Store Connect → TestFlight."
 
     artifacts:
