--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -64,7 +64,7 @@ workflows:
             -configuration Release \
             -archivePath build/ios/archive/Runner.xcarchive \
             clean archive \
-            DEVELOPMENT_TEAM="$CM_DEVELOPER_TEAM" \
+            DEVELOPMENT_TEAM="$APP_STORE_CONNECT_TEAM_ID" \
             PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID"
 
           echo "📦 Exporting IPA..."
@@ -73,12 +73,12 @@ workflows:
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
           <plist version="1.0">
           <dict>
-            <key>method</key><string>app-store</string>
+            <key>method</key><string>app-store-connect</string>
+            <key>teamID</key><string>$APP_STORE_CONNECT_TEAM_ID</string>
+            <key>signingStyle</key><string>automatic</string>
             <key>uploadBitcode</key><false/>
             <key>uploadSymbols</key><true/>
-            <key>signingStyle</key><string>automatic</string>
             <key>compileBitcode</key><false/>
-            <key>teamID</key><string>$CM_DEVELOPER_TEAM</string>
             <key>provisioningProfiles</key>
             <dict>
               <key>$BUNDLE_ID</key><string>AppStore</string>
@@ -98,6 +98,7 @@ workflows:
             exit 1
           fi
           echo "✅ IPA built at: $IPA_PATH"
+
 
       - name: 🩹 Verify Info.plist inside built IPA
         script: |
