--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -40,9 +40,9 @@ workflows:
       - name: 🔢 Update version in Info.plist
         script: |
           INFO_PLIST=$INFO_PLIST_PATH
-
           CURRENT_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$INFO_PLIST" || echo "1.0.0")
           CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$INFO_PLIST" || echo "0")
+
           IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
           NEW_PATCH=$((patch + 1))
           NEW_VERSION="${major}.${minor}.${NEW_PATCH}"
@@ -51,6 +51,21 @@ workflows:
           echo "Updating to Version=$NEW_VERSION Build=$NEW_BUILD"
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $NEW_VERSION" "$INFO_PLIST"
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
+
+      - name: 🕵️ Verify App Store Connect team ID
+        script: |
+          echo "Checking APP_STORE_CONNECT_TEAM_ID..."
+          if [ -z "$APP_STORE_CONNECT_TEAM_ID" ]; then
+            echo "❌ APP_STORE_CONNECT_TEAM_ID is missing!"
+            echo "➡️  Add it in Codemagic UI under Environment variables."
+            echo "➡️  Go to: Codemagic → Your App → Environment variables → Add new"
+            echo "   Name: APP_STORE_CONNECT_TEAM_ID"
+            echo "   Value: (Your 10-character Apple Team ID, e.g. A1B2C3D4E5)"
+            echo "   Secure: ✅ Enabled"
+            exit 1
+          else
+            echo "✅ Detected APP_STORE_CONNECT_TEAM_ID: $APP_STORE_CONNECT_TEAM_ID"
+          fi
 
       - name: 🧾 Use provisioning profiles
         script: |
@@ -99,14 +114,15 @@ workflows:
           fi
           echo "✅ IPA built at: $IPA_PATH"
 
-
       - name: 🩹 Verify Info.plist inside built IPA
         script: |
           IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           mkdir -p extracted_ipa
           unzip -q "$IPA_PATH" -d extracted_ipa
           APP_PLIST=$(find extracted_ipa/Payload -name "Info.plist" | head -1)
+          echo "CFBundleShortVersionString:"
           /usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$APP_PLIST"
+          echo "CFBundleVersion:"
           /usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$APP_PLIST"
 
       - name: 🚀 Upload to App Store Connect
