--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -17,7 +17,7 @@ workflows:
 
     environment:
       groups:
-        - app_store_connect   # Loads your key + team ID
+        - app_store_connect
       ios_signing:
         distribution_type: app_store
         bundle_identifier: com.example.levelUpSport
@@ -46,13 +46,11 @@ workflows:
           INFO_PLIST=$INFO_PLIST_PATH
           CURRENT_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$INFO_PLIST" || echo "1.0.0")
           CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$INFO_PLIST" || echo "0")
-
           IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
           NEW_PATCH=$((patch + 1))
           NEW_VERSION="${major}.${minor}.${NEW_PATCH}"
           NEW_BUILD=$((CURRENT_BUILD + 1))
-
-          echo "Updating to Version=$NEW_VERSION Build=$NEW_BUILD"
+          echo "Updating Info.plist → Version=$NEW_VERSION Build=$NEW_BUILD"
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $NEW_VERSION" "$INFO_PLIST"
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
 
@@ -60,11 +58,10 @@ workflows:
         script: |
           echo "Checking APP_STORE_CONNECT_TEAM_ID..."
           if [ -z "$APP_STORE_CONNECT_TEAM_ID" ]; then
-            echo "❌ APP_STORE_CONNECT_TEAM_ID is missing!"
+            echo "❌ APP_STORE_CONNECT_TEAM_ID missing!"
             exit 1
-          else
-            echo "✅ Detected APP_STORE_CONNECT_TEAM_ID: $APP_STORE_CONNECT_TEAM_ID"
           fi
+          echo "✅ Team ID found: $APP_STORE_CONNECT_TEAM_ID"
 
       - name: 🧾 Use provisioning profiles
         script: |
@@ -72,14 +69,24 @@ workflows:
 
       - name: 🏗️ Build and export IPA manually (App Store)
         script: |
-          echo "🚀 Building archive..."
-          xcodebuild -workspace ios/Runner.xcworkspace \
+          mkdir -p build/ios/archive
+          echo "🚀 Starting Xcode archive build..."
+          set -x
+          xcodebuild \
+            -workspace ios/Runner.xcworkspace \
             -scheme Runner \
             -configuration Release \
             -archivePath build/ios/archive/Runner.xcarchive \
-            clean archive \
             DEVELOPMENT_TEAM="$APP_STORE_CONNECT_TEAM_ID" \
-            PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID"
+            PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
+            clean archive CODE_SIGN_STYLE=Automatic | tee xcodebuild.log | xcpretty
+          set +x
+
+          if [ ! -d "build/ios/archive/Runner.xcarchive" ]; then
+            echo "❌ Archive failed! No .xcarchive found."
+            exit 1
+          fi
+          echo "✅ Archive created successfully."
 
           echo "📦 Exporting IPA..."
           cat > exportOptions.plist <<EOF
@@ -90,13 +97,8 @@ workflows:
             <key>method</key><string>app-store-connect</string>
             <key>teamID</key><string>$APP_STORE_CONNECT_TEAM_ID</string>
             <key>signingStyle</key><string>automatic</string>
-            <key>uploadBitcode</key><false/>
             <key>uploadSymbols</key><true/>
             <key>compileBitcode</key><false/>
-            <key>provisioningProfiles</key>
-            <dict>
-              <key>$BUNDLE_ID</key><string>AppStore</string>
-            </dict>
           </dict>
           </plist>
           EOF
@@ -104,11 +106,11 @@ workflows:
           xcodebuild -exportArchive \
             -archivePath build/ios/archive/Runner.xcarchive \
             -exportPath build/ios/ipa \
-            -exportOptionsPlist exportOptions.plist
+            -exportOptionsPlist exportOptions.plist | tee export.log | xcpretty
 
           IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           if [ -z "$IPA_PATH" ]; then
-            echo "❌ No IPA produced."
+            echo "❌ No IPA produced. Check export.log."
             exit 1
           fi
           echo "✅ IPA built at: $IPA_PATH"
@@ -137,6 +139,8 @@ workflows:
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
+      - xcodebuild.log
+      - export.log
 
     publishing:
       email:
