--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -1,5 +1,5 @@
 workflows:
-  ios-native-workflow:
+  ios-auto-upload:
     name: iOS Auto Build & Upload
     max_build_duration: 120
     instance_type: mac_mini_m2
@@ -29,67 +29,47 @@ workflows:
         APP_STORE_CONNECT_TEAM_ID: $APP_STORE_CONNECT_TEAM_ID
 
     scripts:
-      - name: 🧹 Clean Flutter and iOS folders
+      - name: 🧹 Clean & install dependencies
         script: |
           flutter clean
           rm -rf ios/Pods ios/Podfile.lock
           flutter pub get
+          cd ios && pod install && cd ..
 
-      - name: 🍎 Install CocoaPods
-        script: |
-          cd ios
-          pod install
-          cd ..
-
-      - name: 🔢 Update version in Info.plist
+      - name: 🔢 Auto increment version & build number
         script: |
           INFO_PLIST=$INFO_PLIST_PATH
+
           CURRENT_VERSION=$(/usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$INFO_PLIST" || echo "1.0.0")
           CURRENT_BUILD=$(/usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$INFO_PLIST" || echo "0")
+
           IFS='.' read -r major minor patch <<< "$CURRENT_VERSION"
           NEW_PATCH=$((patch + 1))
           NEW_VERSION="${major}.${minor}.${NEW_PATCH}"
           NEW_BUILD=$((CURRENT_BUILD + 1))
-          echo "Updating Info.plist → Version=$NEW_VERSION Build=$NEW_BUILD"
+
+          echo "🔧 Updating Info.plist → Version=$NEW_VERSION Build=$NEW_BUILD"
           /usr/libexec/PlistBuddy -c "Set :CFBundleShortVersionString $NEW_VERSION" "$INFO_PLIST"
           /usr/libexec/PlistBuddy -c "Set :CFBundleVersion $NEW_BUILD" "$INFO_PLIST"
 
-      - name: 🕵️ Verify App Store Connect team ID
+      - name: 🏗️ Build iOS IPA for App Store
         script: |
-          echo "Checking APP_STORE_CONNECT_TEAM_ID..."
-          if [ -z "$APP_STORE_CONNECT_TEAM_ID" ]; then
-            echo "❌ APP_STORE_CONNECT_TEAM_ID missing!"
-            exit 1
-          fi
-          echo "✅ Team ID found: $APP_STORE_CONNECT_TEAM_ID"
-
-      - name: 🧾 Use provisioning profiles
-        script: |
-          xcode-project use-profiles --project ios/Runner.xcodeproj
-
-      - name: 🏗️ Build and export IPA manually (App Store)
-        script: |
+          echo "🚀 Building iOS archive..."
           mkdir -p build/ios/archive
-          echo "🚀 Starting Xcode archive build..."
-          set -x
           xcodebuild \
             -workspace ios/Runner.xcworkspace \
             -scheme Runner \
             -configuration Release \
+            -destination 'generic/platform=iOS' \
             -archivePath build/ios/archive/Runner.xcarchive \
             DEVELOPMENT_TEAM="$APP_STORE_CONNECT_TEAM_ID" \
             PRODUCT_BUNDLE_IDENTIFIER="$BUNDLE_ID" \
-            clean archive CODE_SIGN_STYLE=Automatic | tee xcodebuild.log | xcpretty
-          set +x
-
-          if [ ! -d "build/ios/archive/Runner.xcarchive" ]; then
-            echo "❌ Archive failed! No .xcarchive found."
-            exit 1
-          fi
-          echo "✅ Archive created successfully."
+            clean archive CODE_SIGN_STYLE=Automatic | xcpretty
 
           echo "📦 Exporting IPA..."
-          cat > exportOptions.plist <<EOF
+          xcodebuild -exportArchive \
+            -archivePath build/ios/archive/Runner.xcarchive \
+            -exportOptionsPlist <(cat <<EOF
           <?xml version="1.0" encoding="UTF-8"?>
           <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
           <plist version="1.0">
@@ -102,45 +82,26 @@ workflows:
           </dict>
           </plist>
           EOF
+          ) \
+            -exportPath build/ios/ipa | xcpretty
 
-          xcodebuild -exportArchive \
-            -archivePath build/ios/archive/Runner.xcarchive \
-            -exportPath build/ios/ipa \
-            -exportOptionsPlist exportOptions.plist | tee export.log | xcpretty
-
+      - name: 🚀 Upload to App Store Connect (TestFlight)
+        script: |
           IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           if [ -z "$IPA_PATH" ]; then
-            echo "❌ No IPA produced. Check export.log."
+            echo "❌ No IPA found!"
             exit 1
           fi
-          echo "✅ IPA built at: $IPA_PATH"
-
-      - name: 🩹 Verify Info.plist inside built IPA
-        script: |
-          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
-          mkdir -p extracted_ipa
-          unzip -q "$IPA_PATH" -d extracted_ipa
-          APP_PLIST=$(find extracted_ipa/Payload -name "Info.plist" | head -1)
-          echo "CFBundleShortVersionString:"
-          /usr/libexec/PlistBuddy -c "Print CFBundleShortVersionString" "$APP_PLIST"
-          echo "CFBundleVersion:"
-          /usr/libexec/PlistBuddy -c "Print CFBundleVersion" "$APP_PLIST"
-
-      - name: 🚀 Upload to App Store Connect
-        script: |
-          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
           echo "📤 Uploading $IPA_PATH to App Store Connect..."
           app-store-connect upload \
             --path "$IPA_PATH" \
             --use-latest-version \
             --submit-for-testflight true
-          echo "✅ Upload complete! Check App Store Connect → TestFlight."
+          echo "✅ Upload complete! Check TestFlight for new build."
 
     artifacts:
       - build/ios/ipa/*.ipa
       - /tmp/xcodebuild_logs/*.log
-      - xcodebuild.log
-      - export.log
 
     publishing:
       email:
