--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -57,17 +57,26 @@ workflows:
 
       - name: 🚀 Upload to TestFlight (App Store Connect)
         script: |
-          IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
+          IPA_PATH=$(find build/ios/iphoneos -name "*.ipa" | head -1)
           if [ -z "$IPA_PATH" ]; then
             echo "❌ No IPA found! Build may have failed."
+            echo "Searching again in default Flutter export path..."
+            IPA_PATH=$(find build/ios/ipa -name "*.ipa" | head -1)
+          fi
+
+          if [ -z "$IPA_PATH" ]; then
+            echo "❌ Still no IPA found. Exiting."
             exit 1
           fi
-          echo "📤 Uploading $IPA_PATH to App Store Connect (TestFlight)..."
+
+          echo "📦 Found IPA at: $IPA_PATH"
+          echo "📤 Uploading $IPA_PATH to TestFlight..."
           app-store-connect upload \
             --path "$IPA_PATH" \
             --use-latest-version \
             --submit-for-testflight true
           echo "✅ Upload complete! Check TestFlight for new build."
+
 
     artifacts:
       - build/ios/ipa/*.ipa
