--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -67,7 +67,7 @@ workflows:
             echo "📦 Found archive: $ARCHIVE_PATH"
             mkdir -p build/ios/ipa
             echo "📤 Exporting IPA from archive..."
-            cat > exportOptions.plist <<EOF
+            echo '
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
@@ -77,10 +77,10 @@ workflows:
   <key>uploadSymbols</key><true/>
   <key>signingStyle</key><string>manual</string>
   <key>stripSwiftSymbols</key><true/>
-  <key>teamID</key><string>${APP_STORE_CONNECT_TEAM_ID}</string>
+  <key>teamID</key><string>'"$APP_STORE_CONNECT_TEAM_ID"'</string>
 </dict>
 </plist>
-EOF
+            ' > exportOptions.plist
 
             xcodebuild -exportArchive \
               -archivePath "$ARCHIVE_PATH" \
