--- a/functions/package.json
+++ b/functions/package.json
@@ -16,7 +16,8 @@
   "dependencies": {
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.5.0",
-    "twilio": "^5.3.3"
+    "twilio": "^5.3.3",
+    "@square/square-connect": "^40.0.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
